--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 language: ruby
 rvm:
-- 2.2.2
+- 2.2.5
 script: ./bin/test
+
+git:
+  depth: 3
 
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+deploy:
+  skip_cleanup: true
+  provider: script
+  script: bin/travis_deploy
+  on:
+    branch: master
+    
