Add mearm redirect

--- a/s3_website.yml
+++ b/s3_website.yml
@@ -39,7 +39,8 @@ s3_reduced_redundancy: true
 
 concurrency_level: 10
 
-# redirects:
+redirects:
+  mearm: "/#hw=mearm-maker|mearm-pi"
 
 site: _site
 
