--- a/s3_website.yml
+++ b/s3_website.yml
@@ -15,7 +15,8 @@ max_age:
 #   - .md
 
 # See http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region for valid endpoints
-# s3_endpoint: ap-northeast-1
+
+s3_endpoint :s3.us-east-2.amazonaws.com
 
 # ignore_on_server: that_folder_of_stuff_i_dont_keep_locally
 
